--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/smclendening/twitterAPI/issues"
   },
-  "homepage": "https://github.com/smclendening/twitterAPI#readme"
+  "homepage": "https://github.com/smclendening/twitterAPI#readme",
+  "dependencies": {
+    "path": "^0.12.7",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
+  }
 }
