--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
